# dcreclass

./: .gitignore  0.1.0.rsync_PSZ2.py  0.1.1.plot_redshift_distribution.py  0.1.2.plot_versions.py  0.2.categorise_PSZ2.py  0.3.0.create_processed_images.py  0.3.1.plot_version_comparison.py  0.3.create_processed_images.py  1.train_classifier.py  2.0.evaluate_classifier.py  2.1.plot_accuracies_vs_tapering.py  2.2.plot_accuracies_vs_stacking.py  4.1.hypertune.py  4.1.hypertune3.py  4.1.train_classifier.py  4.1.train_classifier2_legacy.py  4.1train_classifier_edit.py  4.2.evaluate_classifier.py  README.md  pyproject.toml  requirements_freeze.txt  test.py
jobs/: classify.sh  classify_noiseless.sh  cscs_job.sh  fetch_and_sort.sh  gradcam_accumulation.sh  print_model_summaries.sh  process_data.sh
legacy_scripts/: 4.1.hypertune.py  4.1.hypertune2_legacy.py  4.2.evaluate_classifier2_legacy.py  count_nan_by_ending.py  evaluate_crop_size.py
notebooks/: explore_architectures.ipynb  explore_blurring.ipynb  explore_classification_results.ipynb  explore_original_data.ipynb  plot_unprojected_versions.ipynb
scripts/: 01.rsync_PSZ2.py  02.categorise_PSZ2.py  03.create_processed_images.py  04.train_classifier.py  05.plot_classifier_results.py  audit_dataset_composition.py  print_model_summaries.py  run_gradcam_accumulation.py
taper_tools/: check_problematic_images.py  count_nan_by_ending.py  count_nans_by_ending.py  create_image_sets.py  good_create_image_sets.py  plot_rt_stuff.py  plot_tapered_beam_properties.py
tests/: test_data.py  test_models.py  test_utils.py
(+27 files in other folders)
