[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dcreclass"
version = "0.1.0"
description = "ML classification of diffuse radio emission in galaxy clusters"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "astropy",
    "torch",
    "torchvision",
    "scikit-learn",
    "matplotlib",
    "scipy",
    "astroquery",
]

[tool.setuptools.packages.find]
where = ["src"]